--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>qifeibook</title>
+    <title>棋飞书库 - 经典电子书免费下载 (EPUB/MOBI/PDF)</title>
+    <meta name="description" content="棋飞书库提供海量经典电子书免费下载，支持EPUB、MOBI、PDF等多种格式。收录《活着》、《三体》、《百年孤独》等畅销好书，网盘高速下载，无广告纯净阅读。" />
+    <meta name="keywords" content="电子书下载,免费电子书,Kindle电子书,EPUB下载,MOBI下载,PDF电子书,经典文学,畅销书" />
   </head>
   <body>
     <div id="root"></div>
