feat(ui): 更新网站 Favicon
- 使用 '棋飞书库' 专属设计的新图标
- 替换默认 Vite 图标

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>棋飞书库 - 经典电子书免费下载 (EPUB/MOBI/PDF)</title>
-    <meta name="description" content="棋飞书库提供海量经典电子书免费下载，支持EPUB、MOBI、PDF等多种格式。收录《活着》、《三体》、《百年孤独》等畅销好书，网盘高速下载，无广告纯净阅读。" />
-    <meta name="keywords" content="电子书下载,免费电子书,Kindle电子书,EPUB下载,MOBI下载,PDF电子书,经典文学,畅销书" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>棋飞书库 - 经典电子书免费下载 (EPUB/MOBI/PDF)</title>
+  <meta name="description" content="棋飞书库提供海量经典电子书免费下载，支持EPUB、MOBI、PDF等多种格式。收录《活着》、《三体》、《百年孤独》等畅销好书，网盘高速下载，无广告纯净阅读。" />
+  <meta name="keywords" content="电子书下载,免费电子书,Kindle电子书,EPUB下载,MOBI下载,PDF电子书,经典文学,畅销书" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
