--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
   <!-- Google tag (gtag.js) -->
@@ -8,15 +8,80 @@
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'G-3P6YQRFTHE');
   </script>
+  
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>棋飞书库 - 经典电子书免费下载 (EPUB/MOBI/PDF)</title>
-  <meta name="description" content="棋飞书库提供海量经典电子书免费下载，支持EPUB、MOBI、PDF等多种格式。收录《活着》、《三体》、《百年孤独》等畅销好书，网盘高速下载，无广告纯净阅读。" />
-  <meta name="keywords" content="电子书下载,免费电子书,Kindle电子书,EPUB下载,MOBI下载,PDF电子书,经典文学,畅销书" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  
+  <!-- 基础SEO -->
+  <title>棋飞书库 - 经典电子书免费下载 | EPUB/MOBI/PDF格式</title>
+  <meta name="description" content="棋飞书库提供海量经典电子书免费下载，支持EPUB、MOBI、PDF等多种格式。收录《活着》、《三体》、《百年孤独》等畅销好书，网盘高速下载，无广告纯净阅读体验。" />
+  <meta name="keywords" content="电子书下载,免费电子书,Kindle电子书,EPUB下载,MOBI下载,PDF电子书,经典文学,畅销书,棋飞书库" />
+  <meta name="author" content="棋飞书库" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+  <meta name="baiduspider" content="index, follow" />
+  
+  <!-- 主题色 -->
+  <meta name="theme-color" content="#3b82f6" />
+  <meta name="msapplication-TileColor" content="#3b82f6" />
+  
+  <!-- 规范URL -->
+  <link rel="canonical" href="https://qifeibook.com/" />
+  
+  <!-- 图标 -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
+  
+  <!-- Open Graph (Facebook/微信等) -->
+  <meta property="og:title" content="棋飞书库 - 经典电子书免费下载" />
+  <meta property="og:description" content="提供海量经典电子书免费下载，支持EPUB、MOBI、PDF等多种格式，网盘高速下载" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://qifeibook.com/" />
+  <meta property="og:image" content="https://qifeibook.com/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="棋飞书库" />
+  <meta property="og:locale" content="zh_CN" />
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="棋飞书库 - 经典电子书免费下载" />
+  <meta name="twitter:description" content="提供海量经典电子书免费下载，支持EPUB、MOBI、PDF等多种格式" />
+  <meta name="twitter:image" content="https://qifeibook.com/og-image.png" />
+  
+  <!-- 预加载关键资源 -->
+  <link rel="preconnect" href="https://img.aqifei.top" />
+  <link rel="dns-prefetch" href="https://img.aqifei.top" />
+  
+  <!-- 结构化数据 (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "棋飞书库",
+    "url": "https://qifeibook.com/",
+    "description": "提供海量经典电子书免费下载，支持EPUB、MOBI、PDF等多种格式",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://qifeibook.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "棋飞书库",
+    "url": "https://qifeibook.com/",
+    "logo": "https://qifeibook.com/favicon.png",
+    "sameAs": []
+  }
+  </script>
 </head>
 
 <body>
